HTMLCSS/03PracticaSitioWeb/styles.css
body{
    margin:0px;
    color:#ffffff;
}
.container{
    padding:2rem 5rem;
    background-color: #232830;
    min-height: 100vh;
}
.header-container{
    display:flex;
    flex-direction: row;
    justify-content: space-between;
    flex-wrap: wrap;
}
.header-text{
    font-family: Poppins;
}
.header-labels{
    display:flex;
    flex-direction: row;
    gap:20px
}

.slogan-container{
    text-align: center;
    margin-top: 50px;
}

.title{
    font-family: Recursive;
    font-style: italic;
    color: #FF7575;
    font-weight: 400;
    font-size: clamp(20px, 3rem, 71px);
}
.subtitle{
    font-family: Poppins;
    font-size: 1.5rem;
    font-weight: 400;
}


.logo{
    height:8rem;
    margin-left: 20px;
}


.listing-container{
    display: flex;
    flex-direction: row;
    align-items: center;
}

.listing-icons{
    color: #909090;
    display: flex;
    flex-direction: row;
    margin-right: 10px;
}

.category-label{
    color: #909090;
    font-style: italic;
    font-family: Recursive, sans-serif;
}

.articles-container{
    display: flex;
    flex-wrap: wrap;
    gap: 1.5rem;
    flex-direction: row;
    justify-content: space-between;


}

.article{
    background-color: white;
    color:black;
    padding: 1rem;
    border-radius: 8px;
    font-family: Poppins, sans-serif;
    width: 350px;
    height: 400px;
}

.article-image{
    width: 100%;
    height: 37%;
    border-radius: 8px;
    
}

.pagination-list{
    list-style: none;
    display: block;
    text-align: center;
}

.pagination-item{
    display: inline-block;
}

.footer{
    background-color: none;
    display:flex;
    flex-direction: row;
    justify-content: space-between;
}
.promo-footer{
    display:grid;
    grid-auto-flow: column;
}

